package vn.qlkt.award;

import java.util.Date;

public class FileQuyetDinh {
    private String id;
    private String so_quyet_dinh;
    private Integer nam;
    private Date ngay_ky;
    private String nguoi_ky;
    private String file_path;
    private String loai_khen_thuong;
    private String ghi_chu;
    private Date createdAt;
    private Date updatedAt;
}
