package vn.qlkt.notification;

import java.util.Date;

public class ThongBao {
    private String id;
    private String nguoi_nhan_id;
    private String recipient_role;
    private LoaiThongBao type;
    private String title;
    private String message;
    private String resource;
    private String tai_nguyen_id;
    private String link;
    private Boolean is_read;
    private String nhat_ky_he_thong_id;
    private Date createdAt;
    private Date readAt;
}
